--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
+    "vue-infinite-loading": "^2.1.3",
     "vue-resource": "^1.3.4"
   },
   "devDependencies": {
