--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "vue": "^2.3.3",
     "vue-infinite-loading": "^2.1.3",
-    "vue-resource": "^1.3.4"
+    "vue-resource": "^1.3.4",
+    "vuedraggable": "^2.14.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
