--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "vue": "^2.3.3",
     "vue-infinite-loading": "^2.1.3",
     "vue-resource": "^1.3.4",
-    "vuedraggable": "^2.14.1"
+    "vuedraggable": "^2.14.1",
+    "waypoints": "^4.0.1"
   },
   "devDependencies": {
+    "browserify": "^11.2.0",
+    "browserify-shim": "^3.8.10",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-env": "^1.5.1",
@@ -25,5 +28,18 @@
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
+  },
+  "browser": {
+    "waypoints": "./node_modules/waypoints/lib/noframework.waypoints.js"
+  },
+  "browserify-shim": {
+    "waypoints": {
+      "exports": "waypoints"
+    }
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
   }
 }
