--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.3.3",
     "vue-infinite-loading": "^2.1.3",
     "vue-resource": "^1.3.4",
+    "vue-stash": "^2.0.1-beta",
     "vuedraggable": "^2.14.1",
     "waypoints": "^4.0.1"
   },
